src/main/java/semantic/abstractSintaxTree/test/failing/invalidChainIo.ru
/? VoidAccessException
start {
    IO hola;

    hola = new IO();

    (hola.out_int(1).invalidMethod());
}